// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variable supports a 'varying' flag that will automatically make it pass its data as a varying 1`] = `
"/*** BEGIN: A variable with a varying (1) ***/
varying float v_float_A_variable_with_a_varying_1;
/*** END: A variable with a varying (1) ***/

void main()
{
  /*** BEGIN: A variable with a varying (1) ***/
  float float_A_variable_with_a_varying_1;
  {
    float value = 1.0 + 2.0 + onlyAvailableInVertex.x;
    value += 3.0;
    float_A_variable_with_a_varying_1 = value;
    v_float_A_variable_with_a_varying_1 = value;
  }
  /*** END: A variable with a varying (1) ***/

}"
`;

exports[`variable supports a 'varying' flag that will automatically make it pass its data as a varying 2`] = `
"/*** BEGIN: A variable with a varying (1) ***/
varying float v_float_A_variable_with_a_varying_1;
/*** END: A variable with a varying (1) ***/

void main()
{
  /*** BEGIN: A variable with a varying (1) ***/
  float float_A_variable_with_a_varying_1;
  {
    float value = v_float_A_variable_with_a_varying_1;
    float_A_variable_with_a_varying_1 = value;
  }
  /*** END: A variable with a varying (1) ***/

}"
`;
